hphp/test/zend/good/ext/standard/tests/image/image_type_to_mime_type_variation4.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!defined("IMAGETYPE_SWC") || !defined("IMAGETYPE_ICO") || !extension_loaded('zlib')) {
    die("skip zlib extension is not available or IMAGETYPE_SWC/IMAGETYPE_ICO is not defined ");
}
}
