hphp/test/zend/bad/ext/standard/tests/image/getimagesize_variation4.php.skipif
<?php
	if (!defined("IMAGETYPE_SWC") || !extension_loaded('zlib')) {
		die("skip zlib extension is not available");
	}
?>